--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,29 @@
+inherit_from:
+  - .rubocop/bundler.yml
+  - .rubocop/gemspec.yml
+  - .rubocop/layout.yml
+  - .rubocop/lint.yml
+  - .rubocop/metrics.yml
+  - .rubocop/naming.yml
+  - .rubocop/security.yml
+  - .rubocop/style.yml
+  - .rubocop_todo.yml
+
 AllCops:
-  TargetRubyVersion: 3.0
+  EnabledByDefault: true
+  TargetRubyVersion: 3.3
+  Exclude:
+    - bin/**/*
+    - vendor/**/*
+    - spec/spec_helper.rb
+    - spec/support/rspec.rb
+    - "*.gemspec"
 
-Style/StringLiterals:
+Naming/FileName:
   Enabled: true
-  EnforcedStyle: double_quotes
+  Exclude:
+    - "lib/cerise-boilerplates.rb"
 
-Style/StringLiteralsInInterpolation:
+Naming/MethodParameterName:
   Enabled: true
-  EnforcedStyle: double_quotes
-
-Layout/LineLength:
-  Max: 120
+  AllowedNames: fs
